src/objects/Github_Integration_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_token__c</fullName>
        <label>Access token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GitHub_Username__c</fullName>
        <label>GitHub Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Basic_API_URL__c</fullName>
        <label>Github Basic API URL</label>
        <type>Url</type>
    </fields>
    <label>Github Integration Setting</label>
</CustomObject>